--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@indicado/i18n",
   "description": "lightweight translation module with dynamic json storage",
-  "version": "0.9.2",
+  "version": "0.9.4",
   "homepage": "https://github.com/indicardo/i18n-node",
   "repository": {
     "type": "git",
@@ -18,8 +18,8 @@
     "lib": "."
   },
   "dependencies": {
-    "debug": "2.6.8",
-    "extend": "3.0.1",
+    "debug": "^4.1.1",
+    "extend": "^3.0.2",
     "make-plural": "4.0.1",
     "math-interval-parser": "2.0.0",
     "messageformat": "0.3.1",
@@ -29,13 +29,13 @@
   "devDependencies": {
     "async": "2.4.1",
     "cookie-parser": "1.4.3",
-    "express": "4.13.4",
-    "jshint": "2.9.5",
-    "mocha": "3.4.2",
+    "express": "^4.17.1",
+    "jshint": "^2.11.0",
+    "mocha": "^7.1.1",
     "should": "11.2.1",
     "sinon": "2.3.5",
     "url": "0.11.0",
-    "zombie": "5.0.5"
+    "zombie": "^6.1.4"
   },
   "engines": {
     "node": ">=0.10.0"
